fix : movie slider overflow

--- a/prime-video-ui/src/App.css
+++ b/prime-video-ui/src/App.css
@@ -27,6 +27,10 @@
   --footer-copyright-font-color: #8f8f8f;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 html::-webkit-scrollbar {
   width: 10px;
   transition: all 0.3s;
@@ -48,9 +52,8 @@ body {
   background-color: var(--body-bg-color) !important;
   color: var(--font-color);
   padding-top: 70px;
-  min-height: 100vh;
   min-width: 375px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .flex {
